--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.1",
+    "@angular/cdk": "^10.1.1",
     "@angular/common": "^10.0.1",
     "@angular/compiler": "^10.0.1",
     "@angular/core": "^10.0.1",
@@ -11,6 +12,7 @@
     "@angular/platform-browser": "^10.0.1",
     "@angular/platform-browser-dynamic": "^10.0.1",
     "@angular/router": "^10.0.1",
+    "ngx-bootstrap": "^6.0.0",
     "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
